- GCOMObservation::bvcs(GCOMBvcs&)
- GCOMObservation::bvcs()
- GCOMEventAtom::x_d2()
- GCOMEventAtom::y_d2()
- GCOMTim::reduce(GGti&)
- GCOMDri::tof_correction()
- GCOMDri::num_superpackets()
- GCOMDri::num_used_superpackets()
- GCOMDri::num_skipped_superpackets()
- GCOMSelection::orbital_phases()
- GCOMSelection::orbital_period()
- GCOMSelection::orbital_phase()
- GCOMSelection::pulsar_phases()
- GCOMSelection::fpmtflag()
- GCOMSelection::use_d1()
- GCOMSelection::use_d2()
- gammalib::tmpnam()
- gammalib::compare()
- gammalib::xml_check_parnum()
- gammalib::xml_check_type()
- gammalib::check_energy_interval()
- gammalib::check_prj_x2s_status()
- gammalib::check_prj_s2x_status()

The following methods have been removed:
- GFitsTableCol::scale()
- GCOMObservation::drm(GModelSky&)
- GCOMResponse::irf_spatial()
- GCOMSelection::zeta_min()
- GCOMSelection::zeta_max()
- GCOMSelection::phase_curve()

The following methods have been renamed:
- none

The arguments for the following methods have been changed:
- GModelSpatial::flux(GSkyRegion&, GEnergy&, GTime&) was
  GModelSpatial::flux(GSkyRegion*, GEnergy&, GTime&)
- GCOMObservation::drm(GSkyModel&) was GCOMObservation::drm(GSource&)

The return value of the following methods has been changed:
- GCOMObservation::drb() now returns reference to GCOMDri
- GCOMObservation::drg() now returns reference to GCOMDri
- GCOMObservation::drx() now returns reference to GCOMDri


3. Configuration
-----------------
None


4. Documentation
----------------
Add Astrophysics Source Code Library (ASCL) shield to "About" page (#3630)


5. Application module
---------------------
Add GApplication::stamp() methods to write provenance information into a FITS
HDU, a FITS object or a FITS file. So far the only provenance information that
is written is the CREATOR keyword (#3662).

Add GApplication::eCO2() method to estimate the carbon footprint if the elapsed
CPU time. The carbon footprint estimation is also added to the trailer text of